test/error/parser_files/type_as_binding04.err
File "parser_files/type_as_binding04.st", line 1, characters 10-14:
1 | f (x, y, type) := g .
             ^^^^
Error: Syntax error.
Hint: Is not a correct binding.
